# nextcloud-mcp-server

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-scaffold-AGENTS.md-LICENSE.md-AI-NOTICE-CI-lint.patch  0002-fix-A.1-A.3-byte-preserving-CardDAV-substrate-8-op-n.patch  0003-fix-A.2-chunked-upload-1MB-to-escape-silent-truncati.patch  0004-fork-policy-extend-LICENSE.md-with-AGPL-invariant-CL.patch  AGENTS.md  APPLY.md  CANARY.txt  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.yml  env.sample  env.sample.oauth-multi-user  pyproject.toml  renovate.json  settings.toml.example
.github/scripts/: wait-for-pact-broker.sh
.github/workflows/: bump-version.yml  claude-code-review.yml  claude.yml  docker-build-publish.yml  hold-container-package.yml  pact-record-deployment.yml  pact.yml  rag-evaluation.yml  release.yml  test.yml
app-hooks/post-installation/: 10-install-mail-app.sh  15-setup-ldap-backend.sh
contrib/podman/: nextcloud-mcp.container
docs/: ADR-002-vector-sync-authentication.md  ADR-004-mcp-application-oauth.md  ADR-005-token-audience-validation.md  ADR-007-background-vector-sync-job-management.md  ADR-008-mcp-sampling-for-semantic-search.md  ADR-009-semantic-search-oauth-scope.md  ADR-010-webhook-based-vector-sync.md  ADR-012-unified-multi-algorithm-search.md  ADR-013-rag-evaluation.md  ADR-015-unified-provider-architecture.md  ADR-017-mcp-tool-annotations.md  ADR-018-nextcloud-php-app-for-settings-ui.md  ADR-019-verify-on-read-for-semantic-search.md  ADR-020-deployment-modes-and-configuration-validation.md  ADR-021-configuration-consolidation.md  ADR-022-deployment-mode-consolidation.md  ADR-025-dynaconf-configuration-management.md  ADR-026-pluggable-database-backend.md  ADR-027-rich-search-filters.md  ADR-028-ingest-transport-port.md  ADR-029-pact-contract-testing.md  ADR-030-keyword-only-search-mode.md  ADR-031-docling-document-parsing-backend.md  ADR-031-per-document-index-mode.md  ADR-032-docling-vlm-pipeline.md  ADR-033-per-user-paths-for-shared-documents.md  MCP-1.23-DNS-REBINDING-FIX.md  auth-flows.md  authentication.md  calendar.md  configuration-migration-v2.md  configuration.md  container-package.md  deck.md  login-flow-v2.md  observability.md  running.md  troubleshooting.md  webdav.md  webhook-management-guide.md
ldap/: bootstrap.ldif
mcpb/: manifest.json  run.cmd  run.sh
nextcloud_mcp_server/: acl_hash.py  app.py  canonical.py  capabilities.py  cli.py  config.py  config_validators.py  container_healthcheck.py  context.py  http.py  migrations.py
nextcloud_mcp_server/admin/: __init__.py  payload_backfill.py
nextcloud_mcp_server/alembic/: env.py
nextcloud_mcp_server/api/: __init__.py  access.py  management.py  passwords.py  vector_sync.py  visualization.py  webhooks.py
nextcloud_mcp_server/auth/: browser_oauth_routes.py  client_registration.py  client_registry.py  context_helper.py  elicitation.py  login_flow.py  oauth_routes.py  permissions.py  provision_routes.py  provisioning_decorator.py  scope_authorization.py  session_backend.py  storage.py  token_broker.py  unified_verifier.py  userinfo_routes.py  viz_routes.py  webhook_routes.py
nextcloud_mcp_server/client/: __init__.py  base.py  calendar.py  contacts.py  cookbook.py  deck.py  groups.py  mail.py  notes.py  sharing.py  tables.py  vcard_parser.py  webdav.py
nextcloud_mcp_server/document_processors/: __init__.py  _isolation.py  _native_locks.py  base.py  classifier.py  custom_http.py  docling_serve.py  escalation.py  ocr.py  pymupdf.py  pypdfium2_fast.py  registry.py  source.py  tesseract.py  unstructured.py
nextcloud_mcp_server/embedding/: bm25_provider.py  gateway_batch_client.py  gateway_client.py  ollama_provider.py  service.py
nextcloud_mcp_server/models/: __init__.py  auth.py  calendar.py  contacts.py  deck.py  mail.py  semantic.py  sharing.py  tables.py
nextcloud_mcp_server/observability/: __init__.py  logging_config.py  metrics.py  middleware.py  profiling.py  readiness.py  tracing.py
nextcloud_mcp_server/providers/: __init__.py  _retry.py  anthropic.py  base.py  bedrock.py  mistral.py  ollama.py  openai.py  registry.py
nextcloud_mcp_server/search/: access_filter.py  algorithms.py  bm25_hybrid.py  context.py  pdf_highlighter.py  semantic.py  verification.py
nextcloud_mcp_server/server/: __init__.py  auth_tools.py  calendar.py  collectives.py  contacts.py  deck.py  mail.py  oauth_tools.py  semantic.py  sharing.py  tag_exclusion.py  webdav.py  webhook_presets.py
nextcloud_mcp_server/usage/: __init__.py  store.py
nextcloud_mcp_server/utils/: document_parser.py  validation.py
nextcloud_mcp_server/vector/: __init__.py  _errors.py  batch_ocr_store.py  collection_metadata.py  dead_letter.py  document_chunker.py  document_path_store.py  eviction.py  folder_ancestors.py  html_processor.py  ingest_status.py  mail_content.py  metrics_publisher.py  oauth_sync.py  payload_keys.py  pca.py  placeholder.py  processor.py  purge.py  qdrant_client.py  scanner.py  sharing_state.py  spool.py  visualization.py  webhook_parser.py  webhook_receiver.py
scripts/: chunk_density_sweep.py  extract-changelog.sh  lint-ai-notice.sh  provision-greenmail-account.sh  purge_page_images.py
tests/: conftest.py  test_cli.py  test_models.py
tests/client/: test_sharing_api.py  test_sharing_client.py
tests/contract/: __init__.py  conftest.py  test_gateway_batch_ocr_consumer.py  test_gateway_ocr_consumer.py  test_mcp_provider_verification.py  test_mcp_status_search_types_consumer.py
tests/fixtures/: acl_hash_corpus.json  glyph_corruption.py  ingest_message_example.json  namespace_uuid.txt  storage_backend.py
tests/integration/: _search_helpers.py  conftest.py  provider_fixtures.py  sampling_support.py  test_acl_owner_filter.py  test_acl_shared_search.py  test_app_password_provisioning.py  test_astrolabe_chunk_context.py  test_astrolabe_login_flow_provisioning.py  test_astrolabe_multi_user_background_sync.py  test_astrolabe_plotly_visualization.py  test_astrolabe_session_jwt_search.py  (+20 more)
(+222 files in other folders)
